--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "npm run clean && gatsby build",
+    "build": "BUILD_PATH='./docs' npm run clean && gatsby build",
     "clean": "gatsby clean",
     "coverage": "npm test -- --coverage",
     "deploy": "npm run build && npm run deploy:ci",
